syntax = "proto3";

package proxypb;

option go_package = "github.com/yanet-platform/yanet2/modules/proxy/controlplane/proxypb;proxypb";

service ProxyService {
    // ListConfigs returns all forward module configurations of all
	// dataplane instances.
	rpc ListConfigs(ListConfigsRequest) returns (ListConfigsResponse);

	// ShowConfig returns the current configuration for the forward module.
	rpc ShowConfig(ShowConfigRequest) returns (ShowConfigResponse);

	// Allows to delete forward config if it is not referenced
	// by any pipeline.
	rpc DeleteConfig(DeleteConfigRequest) returns (DeleteConfigResponse);

	rpc SetAddr(SetAddrRequest) returns (SetAddrResponse);
}

message Config {
	uint32 addr = 1;
}

message ListConfigsRequest {
}

// ListConfigsResponse contains existing configurations per dataplane instance.
message ListConfigsResponse {
	repeated string configs = 1;
}

// ShowConfigResponse retrieves the runtime configuration for the forward
// module.
message ShowConfigRequest {
	string name = 1;
}

// ShowConfigResponse contains the configuration details of the forward module.
message ShowConfigResponse {
	Config config = 1;
}

// Delete config with specified name.
message DeleteConfigRequest {
	// Specifies module name and
	// dataplane instance of forward agent to delete.
	string name = 1;
}

message DeleteConfigResponse {
	bool deleted = 1;
}

message SetAddrRequest {
	string name = 1;
	uint32 addr = 2;
}

message SetAddrResponse {
}